--- a/index.css
+++ b/index.css
@@ -31,8 +31,9 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+	list-style-type: none;
 }
 blockquote, q {
 	quotes: none;
