--- a/index.css
+++ b/index.css
@@ -44,54 +44,30 @@ table {
 	border-spacing: 0;
 }
 
-.box {
-	display: flex;
-	flex-direction: row;
-	flex: none;
-	align-items: center;
-	justify-content: space-evenly;
-	background-color: white;
-}
-
+.button {
+	border-radius: 12px;
+	background: white;
+	border: none;
+	color: white;
+	padding: 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	
 .button1 {
 	background-color: #FF764E;
-	border: none;
-	color: white;
-	padding: 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
-  }
-  
+}
+
 .button2 {
 	background-color: #5ED3EB;
-	border: none;
-	color: white;
-	padding: 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
-  }
-  
+	}
+
 .button3 {
 	background-color: #FFCD69;
-	border: none;
-	color: white;
-	padding: 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
-  }
-
+}
+ 
 #fire-paragraph {
     text-align: center;
 }
