--- a/index.css
+++ b/index.css
@@ -44,48 +44,53 @@ table {
 	border-spacing: 0;
 }
 
-
-.top-menu .button1 {
-	background-color: #FF764E;
-	border-radius: 12px;
-	background: white;
-	border: none;
-	color: white;
-	padding: 20px;
-	text-align: center;
-	text-decoration: none;
+.box {
 	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
 }
 
-.top-menu .button2 {
-	background-color: #5ED3EB;
-	border-radius: 12px;
-	background: white;
+.button1 {
+	border-radius: 25px;
+	background-color: #ff764e;
 	border: none;
 	color: white;
-	padding: 20px;
+	padding: 20px; 
 	text-align: center;
 	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;}
-
-.top-menu .button3 {
-	background-color: #FFCD69;
-	border-radius: 12px;
-	background: white;
-	border: none;
-	color: white;
-	padding: 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
 	font-size: 16px;
 	margin: 4px 2px;
+	width: 200px;
+	height: 150px;  
 }
- 
+
+.button2 {
+	border-radius: 25px;
+	background-color: #5ed3eb;
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	font-size: 16px;
+	margin: 4px 2px;
+	width: 200px;
+	height: 150px;  
+}
+
+.button3 {
+	border-radius: 25px;
+	background-color: #ffcd63;
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	font-size: 16px;
+	margin: 4px 2px;
+	width: 200px;
+	height: 150px;  
+}
+
+
 #fire-paragraph {
     text-align: center;
 }
