more button work

--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ table {
 	border-spacing: 0;
 }
 
-.container #button1 {
+.box .button1 {
 	border-radius: 25px;
 	background-color: #ff764e;
 	border: none;
@@ -59,7 +59,7 @@ table {
 	height: 150px;  
 }
 
-.container #button2 {
+.box .button2 {
 	border-radius: 25px;
 	background-color: #5ed3eb;
 	border: none;
@@ -74,7 +74,7 @@ table {
 	height: 150px;  
 }
 
-.container #button3 {
+.box .button3 {
 	border-radius: 25px;
 	background-color: #ffcd63;
 	border: none;
