--- a/index.css
+++ b/index.css
@@ -44,43 +44,41 @@ table {
 	border-spacing: 0;
 }
 
-.container .box1 {
+.container .button {
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 12px;
+}
+
+.button {
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 12px;
+}
+
+.button1 {
 	background-color: #ff764e;
-	border: none;
-	color: white;
-	padding: 20px; 
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
 }
 
-.container .box2 {
+.button2 {
 	background-color: #5ed3eb;
-	border: none;
-	color: white;
-	padding: 20px; 
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
 }
 
-.container .box3 {
+.button3 {
 	background-color: #ffcd63;
-	border: none;
-	color: white;
-	padding: 20px; 
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
+}
 	
 .yosemite-park-guide-box h1 {
 	width: 75%;
