--- a/index.css
+++ b/index.css
@@ -44,50 +44,59 @@ table {
 	border-spacing: 0;
 }
 
-.container .button {
-	border: none;
-	color: white;
-	padding: 20px; 
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
-}
-
-.button {
-	border: none;
-	color: white;
-	padding: 20px; 
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
-}
-
 .button1 {
 	background-color: #ff764e;
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 12px;
 }
 
 .button2 {
 	background-color: #5ed3eb;
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 12px;
 }
 
 .button3 {
 	background-color: #ffcd63;
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 12px;
 }
-	
+
+.yosemite-park-guide-box img {
+	border-radius: 50%;
+}
+
 .yosemite-park-guide-box h1 {
 	width: 75%;
 }
 
 .yosemite-park-guide-box p {
 	width: 50%;
+	margin: 500 px auto;
 	text-align: center;
 }
+
 #image-container {
 	background: #DDB9A3;
 	background-position: center;
@@ -103,4 +112,5 @@ table {
 
 .footer img {
 	width: 100%;
+	margin: 500px auto;
 }
