added more code regarding images and paragraphs

--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ img {
 	border-radius: 50%;
 }
 
-.not-just-a-great-valley p {
+.text-container {
 	background-color: #DDB9A3;	
 	text-align: center;
 }
