--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ table {
 	border-spacing: 0;
 }
 
-.btn-group button {
+#Plan-Your-Visit {
 	background-color: #ff764e;
 	border: none;
 	color: white;
@@ -57,26 +57,40 @@ table {
 	border-radius: 12px;
 }
 
-.btn-group button {
+#Learn-About-the-Park {
 	background-color: #5ed3eb;
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 12px;
 }
 
-.btn-group button {
+#Get-Involved {
 	background-color: #ffcd63;
+	border: none;
+	color: white;
+	padding: 20px; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 12px;
 }
 
 img {
 	border-radius: 50%;
 }
 
-.text-container {
-	background-color: #DDB9A3;	
-	text-align: center;
-}
 
-.text-container p {
-	width: 50%;
-	margin: 500 px auto;
+
+{
+	background-color: #DDB9A3;	
 	text-align: center;
 }
 
