--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ html, body {
 	font-family: 'Roboto Mono';
 }
 
-.btn-group {
+header .btn-group {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -76,9 +76,11 @@ img {
 	border-radius: 50%;
 }
 
-.content_1 h1 {
+.content_1_box header h1 {
 	font-family: 'Chelsea Market';
 }
+
+
 
 .great-valley {
 	background-color: #DDB9A3;	
