--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ html, body {
 	background: white;
 }
 
-.container .button-plan {
+nav .button-plan {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -60,9 +60,13 @@ html, body {
 	margin: 4px 2px;
 	border-radius: 12px;
 	background-color: #ff764e;
+	height: 
+	width: 
+	flex-direction: 
+	justify-content: 
 }
 
-.container .button-learn {
+nav .button-learn {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -75,7 +79,7 @@ html, body {
 	background-color: #5ED3EB;
 }
 
-.container .button-get {
+nav .button-get {
 	border: none;
 	color: white;
 	padding: 20px; 
