--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ html, body {
 	background: white;
 }
 
-nav .button-plan {
+header nav .header-buttons {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -62,7 +62,7 @@ nav .button-plan {
 	background-color: #ff764e;
 }
 
-nav .button-learn {
+header nav .header-buttons {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -75,7 +75,7 @@ nav .button-learn {
 	background-color: #5ED3EB;
 }
 
-nav .button-get {
+header nav .header-buttons {
 	border: none;
 	color: white;
 	padding: 20px; 
