--- a/index.css
+++ b/index.css
@@ -44,11 +44,6 @@ table {
 	border-spacing: 0;
 }
 
-html, body {
-	font-family: 'Roboto Mono';
-	background: white;
-}
-
 header nav .header-buttons {
 	border: none;
 	color: white;
@@ -89,9 +84,8 @@ header nav .header-buttons {
 }
 
 .content_1 img {
-	width: 250px;
+
 	border-radius: 50%;
-	margin: 100px;
 }
 
 .content_1_box h1 {
@@ -126,10 +120,12 @@ header nav .header-buttons {
 	font-weight: bold;
 }
 
-img {
-	width: 100%;
-	margin: 500px auto;
+.mountain-picture img {
+	max-width: 100%;
+	height: auto;
 }
+
+
 
 footer .btn-group {
 	border: none;
