--- a/index.css
+++ b/index.css
@@ -135,8 +135,8 @@ table {
 }
 
 .mountain-picture img {
-	max-width: 100%;
-	height: auto;
+	width: 100%;
+	height: 300px;
 }
 
 footer .btn-group {
