--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ table {
 }
 
 * {
-	font-family: 'Roboto Mono';
+	font-family: 'Roboto-Mono';
 }
 
 .header-buttons .plan {
@@ -102,14 +102,12 @@ table {
 }
 
 .content_1_box_text_content h1 {
-	font-family: 'Chelsea Market';
+	font-family: 'Chelsea-Market';
 }
 
 #great-valley {
 	background-color: #DDB9A3;
 	padding: 15px;	
-	text-align: center;
-	font-family: 'Roboto Mono';
 	color: white;
 }
 
@@ -120,34 +118,35 @@ table {
 
 .campfire-and-rv-paragraphs .fire-picture img {
 	display: block;
-	margin-left: auto;
+	width: 100px;
+	height: 100px;
 	margin-right: auto;
-	width: 50%;
+	margin-left: auto;
+	padding: 20px;
 }
 
-.campfire-and-rv-paragraphs #fire-paragraph p {
-    text-align: center;
-}
-
-#fire-paragraph p #bold1 {
+.campfire-and-rv-paragraphs #fire-paragraph {
+	display: block;
+	text-align: center;
 	font-weight: bold;
 }
 
 .rv-picture img {
 	display: block;
-	margin-left: auto;
+	width: 100px;
+	height: 100px;
 	margin-right: auto;
-	width: 50%;
+	margin-left: auto;
+	padding: 20px;
 }
-
-#rv-paragraph p {
-    text-align: center;
-}
-
-#rv-paragraph p #bold2 {
+	
+#rv-paragraph {
+	display: block;
+	text-align: center;
+	padding: 20px;
 	font-weight: bold;
 }
-
+	
 .mountain-picture img {
 	width: 100%;
 	height: 300px;
