--- a/index.css
+++ b/index.css
@@ -45,10 +45,16 @@ table {
 }
 
 * {
-	font-family: 'Roboto-Mono';
+	font-family: 'Roboto Mono';
 }
 
-.header-buttons .plan {
+.container {
+	display: flex;
+	align-items: space-between;
+	justify-content: center
+}
+
+.container .header-buttons .plan {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -61,7 +67,7 @@ table {
 	background-color: #ff764e;
 }
 
-.header-buttons .learn {
+.container .header-buttons .learn {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -74,7 +80,7 @@ table {
 	background-color: #5ED3EB;
 }
 
-.header-buttons .get {
+.container .header-buttons .get {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -102,7 +108,8 @@ table {
 }
 
 .content_1_box_text_content h1 {
-	font-family: 'Chelsea-Market';
+	font-family: 'Chelsea Market';
+	font-weight: bold;
 }
 
 #great-valley {
@@ -122,7 +129,6 @@ table {
 	height: 100px;
 	margin-right: auto;
 	margin-left: auto;
-	padding: 20px;
 }
 
 .campfire-and-rv-paragraphs #fire-paragraph {
@@ -150,21 +156,17 @@ table {
 .mountain-picture img {
 	width: 100%;
 	height: 300px;
+	margin-top: 20px;
+	margin-bottom: 0.5em;
 }
 
-footer .btn-group {
-	border: none;
-	color: white;
-	padding: 20px; 
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 12px;
+footer .container {
+	display: flex;
+	align-items: space-between;
+	justify-content: center;
 }
 
-.footer-buttons .plan {
+footer .container .footer-buttons .plan {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -177,7 +179,7 @@ footer .btn-group {
 	background-color: #ff764e;
 }
 
-.footer-buttons .learn {
+footer .container .footer-buttons .learn {
 	border: none;
 	color: white;
 	padding: 20px; 
@@ -190,7 +192,7 @@ footer .btn-group {
 	background-color: #5ED3EB;
 }
 
-.footer-buttons .get {
+footer .container .footer-buttons .get {
 	border: none;
 	color: white;
 	padding: 20px; 
