--- a/index.css
+++ b/index.css
@@ -110,6 +110,7 @@ table {
 .content_1_box_text_content h1 {
 	font-family: 'Chelsea Market';
 	font-weight: bold;
+	font-size: 4em;
 }
 
 #great-valley {
@@ -156,14 +157,14 @@ table {
 .mountain-picture img {
 	width: 100%;
 	height: 300px;
-	margin-top: 20px;
-	margin-bottom: 0.5em;
 }
 
 footer .container {
 	display: flex;
 	align-items: space-between;
 	justify-content: center;
+	background-color: #FFEBCD;
+	padding: 1em;
 }
 
 footer .container .footer-buttons .plan {
