--- a/index.css
+++ b/index.css
@@ -50,8 +50,9 @@ table {
 
 .container {
 	display: flex;
-	align-items: space-between;
-	justify-content: center
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
 .container .header-buttons .plan {
@@ -96,8 +97,8 @@ table {
 .content_1 img {
 	border-radius: 50%;
 	position: absolute;
-	top: 150px;
-	left: 50px;
+	top: 200px;
+	left: 300px;
 	width: 200px; 
 }
 
@@ -161,8 +162,9 @@ table {
 
 footer .container {
 	display: flex;
-	align-items: space-between;
+	flex-direction: row;
 	justify-content: center;
+	align-items: center;
 	background-color: #FFEBCD;
 	padding: 1em;
 }
