--- a/index.css
+++ b/index.css
@@ -98,14 +98,15 @@ table {
 	border-radius: 50%;
 	position: absolute;
 	top: 200px;
-	left: 75px;
+	left: 400px;
 	width: 200px; 
 }
 
 .content_1_box_text_content {
 	display: block;
 	text-align: center;
-	margin: 25px 50px 75px 50px;
+	margin: 45px 50px 75px 75px;
+	padding-left: 125px;
 }
 
 .content_1_box_text_content h1 {
@@ -132,12 +133,15 @@ table {
 	height: 100px;
 	margin-right: auto;
 	margin-left: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
 
 .campfire-and-rv-paragraphs #fire-paragraph {
 	display: block;
 	text-align: center;
 	font-weight: bold;
+	padding-bottom: 50px;
 }
 
 .rv-picture img {
@@ -146,14 +150,15 @@ table {
 	height: 100px;
 	margin-right: auto;
 	margin-left: auto;
-	padding: 20px;
+	margin-top:  50px;
+	margin-bottom: 50px;
 }
 	
 #rv-paragraph {
 	display: block;
 	text-align: center;
-	padding: 20px;
 	font-weight: bold;
+	padding-bottom: 50px;
 }
 	
 .mountain-picture img {
@@ -163,9 +168,9 @@ table {
 
 footer .container {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: space-around;
 	background-color: #FFEBCD;
+	height: 175px;
 }
 
 footer .container .footer-buttons .plan {
