working more with footer buttons on spacing and justify content while keeping background colors

--- a/index.css
+++ b/index.css
@@ -168,7 +168,8 @@ table {
 
 footer .container {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
+	align-items: center;
 	background-color: #FFEBCD;
 	height: 175px;
 }
